--- a/style.css
+++ b/style.css
@@ -1,3 +1,43 @@
-body {
-    background: blue;
-  }
+section {
+  height: 500px;
+  background-color: white;
+  border: solid black 1px;
+}
+
+.hero {
+  background-color: #1c1d25;
+  height: 100vh;
+  color: white;
+  font-size: 40px;
+}
+
+footer {
+  height: 500px;
+  background-color: black;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+  width: 500px;
+  justify-content: space-around;
+  font-size: 30px;
+}
+
+li {
+text-decoration: none;
+}
+
+h1 {
+  font-size: 90px;
+}
+
+.hero-text {
+  margin-left: 80px;
+}
+
