--- a/src/style.css
+++ b/src/style.css
@@ -42,9 +42,19 @@ h1 {
   margin: 0;
 }
 
+h2 {
+  font-size: 60px;
+}
+
 p {
   margin: 0;
   font-weight: 100;
+  font-size: 60px;
+}
+
+.subtext {
+  font-size: 15px;
+  font-weight: 300px;
 }
 
 .hero-area {
@@ -91,4 +101,44 @@ button:active {
 
 .social {
   margin: 20px;
+}
+
+.sub-section {
+  display: flex;
+  justify-content: space-around;
+  padding: 80px;
+}
+
+.sub-section-alternative {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 80px;
+}
+
+.headshot {
+  width: 300px;
+  border-radius: 150px;
+}
+
+.headshot.container {
+  display: flex;
+  align-items: center;
+}
+
+.project-card {
+  width: 300px;
+  height: 500px;
+  border: solid black;
+}
+
+.project-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.project-image {
+  margin-top: 25px;
+  width: 250px;
+  border-radius: 125px;
 }
